# param-golf-1

./: WORKLOG.md  main.py  pyproject.toml  requirements.txt  train_gpt_apr_14_docgate.py  train_gpt_apr_14_v2.py  train_gpt_thorne.py  train_gpt_winner.py
records/track_non_record_16mb/2026-04-15_DocAttentionGate_FlexAttn_SP1024/: README.md  submission.json  train_gpt.py
